<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".SmsActivity" >
    
    <com.zf.layout.TitleLayout 
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.zf.layout.TitleLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <EditText
        android:id="@+id/not_default_app"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textSize="15sp"
        android:inputType="number"
        android:hint="@string/in" />


    <EditText
        android:id="@+id/smstime"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/not_default_app"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/ST" />
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mmsNumber"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >
        
        <Button
            android:id="@+id/btn_send2"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/btn_send2" />
        
        <Button
            android:id="@+id/btn_send3"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/btn_send3" /> 
    </LinearLayout>

    <EditText
        android:id="@+id/smsHHS"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/smstime"
        android:ems="10"
        android:hint="@string/in2"
        android:inputType="number"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/smsText"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/smsHHS"
        android:ems="10"
        android:hint="@string/Text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_send1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/smsText"
        android:text="@string/btn_send1" />

    <EditText
        android:id="@+id/mmsNumber"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_send1"
        android:ems="10"
        android:hint="@string/mms"
        android:inputType="number"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_number"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:ems="10"
        android:hint="@string/number_hint"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:inputType="number"
        android:textSize="15sp" />
    <Button
            android:id="@+id/btn_send"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:layout_below="@id/et_number"
            android:text="@string/btn_send" />
    <Button 
            android:id="@+id/Handover"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_below="@id/btn_send"
            android:text="切换回系统短信"
            />
        
        
    </RelativeLayout>

    
</RelativeLayout>
